# OpenNav

./: CHANGELOG.md  Cargo.toml  README.md  build_appimage.sh  distribution.md  opennav.desktop
.github/workflows/: release.yml
flatpak/: com.opennav.app.yml
resources/: style.css
src/: app.rs  main.rs
src/data/: browser_repository.rs  mod.rs  store.rs
src/ui/: engines_dialog.rs  window.rs
