[package]
name = "opennav"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_12"] } # Targeting recent GTK4
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
once_cell = "1.18"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
