[package]
name = "opennav"
version = "1.2.3"
edition = "2021"
license = "GPL-3.0"
description = "A keyboard-centric browser selector"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_12"] } # Targeting recent GTK4
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
once_cell = "1.18"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
shlex = "1.3.0"
reqwest = { version = "0.12.28", features = ["blocking", "json"] }
url = "2.5.7"
